--- a/services/anxiety-and-depression-management.html
+++ b/services/anxiety-and-depression-management.html
@@ -109,7 +109,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header pt-5 mb-6 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center pt-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -118,6 +118,7 @@
                         <nav aria-label="breadcrumb animated slideInDown">
                             <ol class="breadcrumb justify-content-center mb-0">
                                 <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../our-services.html">Services</a></li>
                                 <li class="breadcrumb-item" aria-current="page">Anxiety and Depression Management</li>
                             </ol>
                         </nav>
@@ -128,23 +129,84 @@
     </div>
     <!-- Page Header End -->
 
-
-    <!-- Page Under Construction Start -->
-    <div class="container-fluid pt-6 pb-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1 text-uppercase">Page Under Construction</h1>
-                    <p class="mb-4">
-                        We're sorry, this page is under construction. Please check back later or contact us for more information.
-                    </p>
-                    <a class="btn btn-primary py-3 px-4" href="../our-services.html">Go Back To Services</a>
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-6 text-uppercase mb-5">Healing Begins with Understanding</h1>
+                <p>
+                    At Firm Foundation LLC, we recognize that anxiety and depression are not just mental health issues; 
+                    they are complex conditions that affect every aspect of your life. Our Anxiety and Depression Management 
+                    Service is designed to provide you with a comprehensive, compassionate, and personalized approach to 
+                    managing these challenges. We believe in empowering our clients with the tools and support they need to 
+                    reclaim their lives and find joy again.
+                </p>
+            </div>
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                    <img class="img-fluid" src="../img/services/anxiety-depression.jpg" alt="">
                 </div>
+                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
+                    <h1>Our Approach</h1>
+                    <div class="owl-carousel testimonial-carousel">
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Individual Therapy</h5>
+                            </div>
+                            <p class="fs-5">
+                                Firm Foundations offers mental health counseling to teens, adults, and couples. 
+                                Treatment is focused on helping clients manage symptoms of anxiety and depression, 
+                                particularly those related to life transitions and stress.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Cognitive Behavioral Therapy (CBT)</h5>
+                            </div>
+                            <p class="fs-5">
+                                The agency utilizes evidence-based therapies like CBT and solution-focused practices. 
+                                The emphasis is on finding solutions to current problems and developing new skills 
+                                for future wellness.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Telehealth Services</h5>
+                            </div>
+                            <p class="fs-5">
+                                Firm Foundations provides convenient telehealth services, making it easier for 
+                                clients to access care from various locations (e.g., the states of Ohio and Florida).
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Specialized Areas</h5>
+                            </div>
+                            <p class="fs-5">
+                                Beyond general anxiety and depression, the counseling services address 
+                                a wide range of issues, including:
+                            </p>
+                            <p><i class="fa fa-check-square text-primary me-3"></i>Relationship and family conflict</p>
+                            <p><i class="fa fa-check-square text-primary me-3"></i>Grief and loss</p>
+                            <p><i class="fa fa-check-square text-primary me-3"></i>Life transitions</p>
+                            <p><i class="fa fa-check-square text-primary me-3"></i>Stress management</p>
+                            <p><i class="fa fa-check-square text-primary me-3"></i>Adjustment issues</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Why It Matters</h1>
+                <p class="fs-5 mb-4">
+                    Anxiety and depression are more than just emotions — they're signals that something 
+                    deeper needs attention. Our goal is to help you feel heard, understood, and empowered to 
+                    move forward with confidence.
+                </p>
+                <a class="btn btn-primary" href="#">Schedule Your First Session</a>
             </div>
         </div>
     </div>
-    <!-- Page Under Construction End -->
+    <!-- Main Service Tile End -->
 
 
      <!-- Footer Start -->
