--- a/services/asthma-management.html
+++ b/services/asthma-management.html
@@ -108,7 +108,7 @@
     <!-- Navbar End -->
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header pt-5 mb-6 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center pt-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -117,6 +117,7 @@
                         <nav aria-label="breadcrumb animated slideInDown">
                             <ol class="breadcrumb justify-content-center mb-0">
                                 <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../our-services.html">Services</a></li>
                                 <li class="breadcrumb-item" aria-current="page">Asthma Management</li>
                             </ol>
                         </nav>
@@ -127,23 +128,128 @@
     </div>
     <!-- Page Header End -->
 
-
-    <!-- Page Under Construction Start -->
-    <div class="container-fluid pt-6 pb-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1 text-uppercase">Page Under Construction</h1>
-                    <p class="mb-4">
-                        We're sorry, this page is under construction. Please check back later or contact us for more information.
-                    </p>
-                    <a class="btn btn-primary py-3 px-4" href="../our-services.html">Go Back To Services</a>
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-6 text-uppercase mb-5">Breathe Easier. Live Stronger.</h1>
+                <p>
+                    At Firm Foundation LLC, we understand that asthma can be a challenging condition to manage. Our
+                    dedicated team of healthcare professionals is here to provide you with comprehensive asthma
+                    management services. From personalized treatment plans to ongoing support, we are committed to
+                    helping you breathe easier and live a healthier life.
+                </p>
+                <p>
+                    Our approach to asthma care is built on three key principles:
+                </p>
+            </div>
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                    <img class="img-fluid" src="../img/services/asthma-management.png" alt="">
                 </div>
+                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="owl-carousel testimonial-carousel">
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Holistic Assessment and Management</h5>
+                            </div>
+                            <p class="fs-5">
+                                We take a holistic view of your health, recognizing that asthma is often influenced by various factors. 
+                                We work with you to identify and address not only the medical aspects of your condition but also 
+                                environmental, lifestyle, and emotional triggers. This includes a thorough assessment of your home 
+                                and workplace to help you minimize exposure to allergens and irritants.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Personalized Asthma Action Plans</h5>
+                            </div>
+                            <p class="fs-5">
+                                There is no one-size-fits-all solution for asthma. Our team will collaborate with you to create a 
+                                personalized asthma action plan. This written plan will be your guide, detailing when and how to 
+                                use your medications, what to do if your symptoms worsen, and when to seek emergency care. We'll 
+                                ensure you have the knowledge and tools to manage your asthma confidently.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Patient Education and Empowerment</h5>
+                            </div>
+                            <p class="fs-5">
+                                We believe that an informed patient is an empowered patient. We are committed to educating you on 
+                                your condition, including proper inhaler technique, understanding your triggers, and implementing 
+                                self-management strategies. We'll provide ongoing support and resources to help you take an active 
+                                role in your own health.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row g-5 align-items-center py-4">
+                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
+                    <h1>Our Asthma Services Include:</h1>
+                    <div class="owl-carousel testimonial-carousel">
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Diagnosis and Monitoring</h5>
+                            </div>
+                            <p class="fs-5">
+                                We use advanced diagnostic tools, such as spirometry and other lung function tests, to accurately 
+                                diagnose and monitor your asthma. We also conduct ongoing check-ups to review your symptoms and 
+                                ensure your treatment plan remains effective.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Medication Management</h5>
+                            </div>
+                            <p class="fs-5">
+                                We provide expert guidance on the full spectrum of asthma medications, including quick-relief inhalers, 
+                                long-term controller medications, and newer therapies like biologics for severe asthma.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Trigger Identification and Avoidance</h5>
+                            </div>
+                            <p class="fs-5">
+                                We help you identify your personal asthma triggers—whether they are allergens like pollen or dust, 
+                                exercise, or stress—and provide practical strategies for avoiding them.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Breathing and Mindfulness Techniques</h5>
+                            </div>
+                            <p class="fs-5">
+                                In line with our holistic philosophy, we offer guidance on breathing exercises and mindfulness 
+                                practices that can help you manage stress and improve your lung function.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Specialized Care</h5>
+                            </div>
+                            <p class="fs-5">
+                                We can provide referrals to specialists like pulmonologists and allergists if needed, 
+                                ensuring you have access to a complete and coordinated healthcare team.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                    <img class="img-fluid" src="../img/services/breathing.jpg" alt="">
+                </div>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.5s" style="max-width: 600px;">
+                <p class="fs-5 mb-4">
+                    Living with asthma doesn't have to mean living in fear. At Firm Foundation LLC, we equip our 
+                    clients with tools and knowledge to take control of their health—empowering them to breathe easier and thrive.
+                </p>
             </div>
         </div>
     </div>
-    <!-- Page Under Construction End -->
+    <!-- Main Service Tile End -->
 
 
      <!-- Footer Start -->
