--- a/services/birth-control.html
+++ b/services/birth-control.html
@@ -109,7 +109,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header pt-5 mb-6 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center pt-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -118,6 +118,7 @@
                         <nav aria-label="breadcrumb animated slideInDown">
                             <ol class="breadcrumb justify-content-center mb-0">
                                 <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../our-services.html">Services</a></li>
                                 <li class="breadcrumb-item" aria-current="page">Birth Control</li>
                             </ol>
                         </nav>
@@ -128,24 +129,83 @@
     </div>
     <!-- Page Header End -->
 
-
-    <!-- Page Under Construction Start -->
-    <div class="container-fluid pt-6 pb-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1 text-uppercase">Page Under Construction</h1>
-                    <p class="mb-4">
-                        We're sorry, this page is under construction. Please check back later or contact us for more information.
-                    </p>
-                    <a class="btn btn-primary py-3 px-4" href="../our-services.html">Go Back To Services</a>
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-6 text-uppercase mb-5">Your Body. Your Choice. Your Future.</h1>
+                <p>
+                    At Firm Foundation LLC, we provide compassionate, confidential, and comprehensive birth control 
+                    services to support individuals and families in making informed reproductive health decisions. 
+                    Whether you're exploring options for the first time or seeking ongoing care, our team is here 
+                    to guide you every step of the way.
+                </p>
+            </div>
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                    <img class="img-fluid" src="../img/services/birth-control.jpg" alt="">
                 </div>
+                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
+                    <h1>Our Services Include</h1>
+                    <div class="owl-carousel testimonial-carousel">
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Contraceptive Counseling</h5>
+                            </div>
+                            <p class="fs-5">
+                                Personalized guidance to help you choose the method that best fits your 
+                                lifestyle, health needs, and future plans.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Short & Long Term Options</h5>
+                            </div>
+                            <p class="fs-5">
+                                Access to a wide range of birth control methods including pills, 
+                                patches, injectables, implants, IUDs, and emergency contraception.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Fertility Education & Planning</h5>
+                            </div>
+                            <p class="fs-5">
+                                Support for individuals and couples looking to understand their 
+                                reproductive health and plan for future pregnancies.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Telehealth Consultations</h5>
+                            </div>
+                            <p class="fs-5">
+                                Convenient virtual appointments for birth control counseling and prescription refills.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Youth & Young Adult Services</h5>
+                            </div>
+                            <p class="fs-5">
+                                Age-appropriate education and support for teens and young adults navigating reproductive choices.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Why It Matters</h1>
+                <p class="fs-5 mb-4">
+                    Birth control is more than prevention—it's empowerment. We believe everyone deserves access to safe, 
+                    reliable, and respectful reproductive health care. Our goal is to help you take control of your health 
+                    and your future with confidence.
+                </p>
+                <a class="btn btn-primary" href="#">Schedule Your First Session</a>
             </div>
         </div>
     </div>
-    <!-- Page Under Construction End -->
-
+    <!-- Main Service Tile End -->
 
      <!-- Footer Start -->
     <div class="container-fluid bg-dark footer py-5 wow fadeIn" data-wow-delay="0.1s">
