--- a/services/dot-exams.html
+++ b/services/dot-exams.html
@@ -109,7 +109,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header pt-5 mb-6 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center pt-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -118,6 +118,7 @@
                         <nav aria-label="breadcrumb animated slideInDown">
                             <ol class="breadcrumb justify-content-center mb-0">
                                 <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../our-services.html">Services</a></li>
                                 <li class="breadcrumb-item" aria-current="page">DOT Examination</li>
                             </ol>
                         </nav>
@@ -128,23 +129,102 @@
     </div>
     <!-- Page Header End -->
 
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-6 text-uppercase mb-5">Keeping Drivers Safe, Certified and Road-Ready.</h1>
+                <p>
+                    At Firm Foundation LLC, we provide Department of Transportation (DOT) physical exams to 
+                    ensure commercial drivers meet the medical standards required by the Federal Motor Carrier 
+                    Safety Administration (FMCSA). Our certified medical examiners deliver thorough, efficient 
+                    evaluations to help drivers stay compliant and confident behind the wheel.
 
-    <!-- Page Under Construction Start -->
-    <div class="container-fluid pt-6 pb-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1 text-uppercase">Page Under Construction</h1>
-                    <p class="mb-4">
-                        We're sorry, this page is under construction. Please check back later or contact us for more information.
-                    </p>
-                    <a class="btn btn-primary py-3 px-4" href="../our-services.html">Go Back To Services</a>
+                </p>
+            </div>
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                    <img class="img-fluid" src="../img/services/dot-exams.png" alt="">
                 </div>
+                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
+                    <h1>What's Included in a DOT Exam</h1>
+                    <p class="fs-5">
+                        Our DOT physicals assess key health indicators to determine fitness for duty:
+                    </p>
+                    <div class="owl-carousel testimonial-carousel">
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Vision & Hearing Tests</h5>
+                            </div>
+                            <p class="fs-5">
+                                Ensuring drivers meet minimum standards for safe operation.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Blood Pressure & Pulse Rate</h5>
+                            </div>
+                            <p class="fs-5">
+                                Monitoring cardiovascular health and identifying potential risks.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Urinalysis</h5>
+                            </div>
+                            <p class="fs-5">
+                                Screening for underlying medical conditions such as diabetes.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Medical History Review</h5>
+                            </div>
+                            <p class="fs-5">
+                                Evaluating past and current health issues that may affect driving.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Physical Examination</h5>
+                            </div>
+                            <p class="fs-5">
+                                Full-body check to assess strength, flexibility, and overall wellness.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>What You'll Receive</h1>
+                <p><i class="fa fa-check-square text-primary me-3"></i>
+                    <b>
+                        DOT Medical Examiner's Certificate (MEC) upon passing
+                    </b>
+                </p>
+                <p><i class="fa fa-check-square text-primary me-3"></i>
+                    <b>
+                        Guidance on next steps if further evaluation or treatment is needed.
+                    </b>
+                </p>
+                <p><i class="fa fa-check-square text-primary me-3"></i>
+                    <b>
+                        Friendly reminders for renewal—certificates are typically valid for up to 2 years
+                    </b>
+                </p>
+                <a class="btn btn-primary" href="#">Schedule Your First Session</a>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Who Needs a DOT Exam?</h1>
+                <p class="fs-5 mb-4">
+                    If you operate a commercial motor vehicle (CMV)—including trucks, buses, or delivery vans — 
+                    you're required to pass a DOT physical to obtain or renew your Commercial Driver's License (CDL).
+                </p>
+                <a class="btn btn-primary" href="#">Schedule Your First Session</a>
             </div>
         </div>
     </div>
-    <!-- Page Under Construction End -->
+    <!-- Main Service Tile End -->
 
 
      <!-- Footer Start -->
