--- a/services/hair-loss-management.html
+++ b/services/hair-loss-management.html
@@ -109,7 +109,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header pt-5 mb-6 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center pt-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -118,6 +118,7 @@
                         <nav aria-label="breadcrumb animated slideInDown">
                             <ol class="breadcrumb justify-content-center mb-0">
                                 <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../our-services.html">Services</a></li>
                                 <li class="breadcrumb-item" aria-current="page">Hair Loss Management</li>
                             </ol>
                         </nav>
@@ -129,22 +130,91 @@
     <!-- Page Header End -->
 
 
-    <!-- Page Under Construction Start -->
-    <div class="container-fluid pt-6 pb-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1 text-uppercase">Page Under Construction</h1>
-                    <p class="mb-4">
-                        We're sorry, this page is under construction. Please check back later or contact us for more information.
-                    </p>
-                    <a class="btn btn-primary py-3 px-4" href="../our-services.html">Go Back To Services</a>
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-6 text-uppercase mb-5">Restore Confidence. Reclaim Your Look.</h1>
+                <p>
+                    At Firm Foundation LLC, we understand that hair loss can affect more than just appearance - 
+                    it can impact self-esteem, emotional well-being, and quality of life. That's why we offer 
+                    compassionate, science-backed solutions to help you take control of your hair health.
+                </p>
+            </div>
+            <div class="text-center mx-auto py-5 wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>What Causes Hair Loss?</h1>
+                <p class="fs-5 mb-4">
+                    Hair loss can result from a variety of factors, including:
+                </p>
+                <p><i class="fa fa-check-square text-primary me-3"></i><b>Genetics (e.g. male or female pattern baldness).</b></p>
+                <p><i class="fa fa-check-square text-primary me-3"></i><b>Hormonal changes or imbalances.</b></p>
+                <p><i class="fa fa-check-square text-primary me-3"></i><b>Stress, illness, or nutritional deficiencies.</b></p>
+                <p><i class="fa fa-check-square text-primary me-3"></i><b>Scalp conditions or autoimmune disorders.</b></p>
+                <p><i class="fa fa-check-square text-primary me-3"></i><b>Medication side effects or lifestyle habits.</b></p>
+            </div>
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                    <img class="img-fluid" src="../img/services/hair-loss.jpg" alt="">
                 </div>
+                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
+                    <h1>Our Services Include</h1>
+                    <div class="owl-carousel testimonial-carousel">
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Comprehensive Scalp & Hair Assessment</h5>
+                            </div>
+                            <p class="fs-5">
+                                In-depth evaluation to identify the root cause of hair loss.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Medical & Non-Medical Treatments</h5>
+                            </div>
+                            <p class="fs-5">
+                                Options may include topical solutions, oral medications, 
+                                Platelet-Rich Plasma(PRP) therapy, microneedling, or referrals for advanced care.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Lifestyle & Nutritional Counseling</h5>
+                            </div>
+                            <p class="fs-5">
+                                Guidance on diet, stress management, and habits that support healthy hair growth.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Supportive Counseling</h5>
+                            </div>
+                            <p class="fs-5">
+                                Emotional support to help clients navigate the psychological impact of hair loss.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Youth & Adult Services</h5>
+                            </div>
+                            <p class="fs-5">
+                                Age-appropriate care for teens, adults, and seniors experiencing hair thinning or baldness.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Why It Matters</h1>
+                <p class="fs-5 mb-4">
+                    We believe that everyone deserves to feel confident in their own skin - and hair. 
+                    Our team is here to walk with you through every step of your hair restoration journey, 
+                    offering expert care in a respectful, judgment-free environment
+                </p>
+                <a class="btn btn-primary" href="#">Schedule Your First Session</a>
             </div>
         </div>
     </div>
-    <!-- Page Under Construction End -->
+    <!-- Main Service Tile End -->
 
 
      <!-- Footer Start -->
