--- a/services/immigration-medical-exams.html
+++ b/services/immigration-medical-exams.html
@@ -109,7 +109,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header pt-5 mb-6 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center pt-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -118,6 +118,7 @@
                         <nav aria-label="breadcrumb animated slideInDown">
                             <ol class="breadcrumb justify-content-center mb-0">
                                 <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../our-services.html">Services</a></li>
                                 <li class="breadcrumb-item" aria-current="page">Immigration Medical Examination</li>
                             </ol>
                         </nav>
@@ -129,22 +130,93 @@
     <!-- Page Header End -->
 
 
-    <!-- Page Under Construction Start -->
-    <div class="container-fluid pt-6 pb-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1 text-uppercase">Page Under Construction</h1>
-                    <p class="mb-4">
-                        We're sorry, this page is under construction. Please check back later or contact us for more information.
-                    </p>
-                    <a class="btn btn-primary py-3 px-4" href="../our-services.html">Go Back To Services</a>
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-6 text-uppercase mb-5">Trusted Evaluations for a New Beginning.</h1>
+                <p>
+                    At Firm Foundation LLC, we provide USCIS-compliant immigration medical exams to support individuals 
+                    and families on their journey toward lawful residency. Our certified medical professionals deliver 
+                    thorough, respectful evaluations in a welcoming environment - ensuring you meet all health 
+                    requirements with confidence
+                </p>
+            </div>
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                    <img class="img-fluid" src="../img/services/immigration.jpg" alt="">
                 </div>
+                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
+                    <h1>What's Included in Your Exam</h1>
+                    <p class="fs-5 mb-4">
+                        Our immigration physicals follow the guidelines set by the U.S. Citizenship 
+                        and Immigration Services (USCIS) and include:
+                    </p>
+                    <div class="owl-carousel testimonial-carousel">
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Medical History Review</h5>
+                            </div>
+                            <p class="fs-5">
+                                Assessment of past and current health conditions.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Physical Examination</h5>
+                            </div>
+                            <p class="fs-5">
+                                Comprehensive check of vital signs, physical health and mental wellness.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Required Laboratory Tests</h5>
+                            </div>
+                            <p class="fs-5">
+                                Screenings for communicable diseases such as tuberculosis, syphilis and gonorrhea.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Vaccination Review & Administration</h5>
+                            </div>
+                            <p class="fs-5">
+                                Verification of immunization records and administration of any required vaccines.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Completion of Form I-693</h5>
+                            </div>
+                            <p class="fs-5">
+                                Our civil surgeon will complete and seal the official USCIS medical form for submission.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-start mx-auto py-5 wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1 class="text-center">What to Bring?</h1>
+                <p class="fs-5 mb-4 text-center">
+                    To ensure a smooth visit, please bring:
+                </p>
+                <p><i class="fa fa-check-square text-primary me-3"></i><b>Government-issued photo ID (e.g. passport or driver's license).</b></p>
+                <p><i class="fa fa-check-square text-primary me-3"></i><b>Vaccination records.</b></p>
+                <p><i class="fa fa-check-square text-primary me-3"></i><b>Any relevant medical documentation.</b></p>
+                <p><i class="fa fa-check-square text-primary me-3"></i><b>A copy of Form I-693 (Part 1 completed).</b></p>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Why It Matters</h1>
+                <p class="fs-5 mb-4">
+                    We understand that immigration is a life-changing journey. Our goal is to make the medical 
+                    exam process as simple, respectful, and efficient as possible - so you can focus on what comes next.
+                </p>
+                <a class="btn btn-primary" href="#">Book Now</a>
             </div>
         </div>
     </div>
-    <!-- Page Under Construction End -->
+    <!-- Main Service Tile End -->
 
 
      <!-- Footer Start -->
