--- a/services/mental-health-and-counseling.html
+++ b/services/mental-health-and-counseling.html
@@ -109,7 +109,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header pt-5 mb-6 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center pt-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -118,6 +118,7 @@
                         <nav aria-label="breadcrumb animated slideInDown">
                             <ol class="breadcrumb justify-content-center mb-0">
                                 <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../our-services.html">Services</a></li>
                                 <li class="breadcrumb-item" aria-current="page">Mental Health And Counseling</li>
                             </ol>
                         </nav>
@@ -129,22 +130,94 @@
     <!-- Page Header End -->
 
 
-    <!-- Page Under Construction Start -->
-    <div class="container-fluid pt-6 pb-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1 text-uppercase">Page Under Construction</h1>
-                    <p class="mb-4">
-                        We're sorry, this page is under construction. Please check back later or contact us for more information.
-                    </p>
-                    <a class="btn btn-primary py-3 px-4" href="../our-services.html">Go Back To Services</a>
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-6 text-uppercase mb-5">Compassionate Care for Every Journey.</h1>
+                <p>
+                    At Firm Foundation LLC, we believe that mental wellness is foundational to a thriving life. 
+                    Our counseling services are designed to support individuals, couples and families through life's 
+                    challenges - whether you're navigating anxiety, depression, relationship struggles or simply 
+                    seeking personal growth.
+                </p>
+            </div>
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                    <img class="img-fluid" src="../img/services/mental-health.jpg" alt="">
                 </div>
+                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
+                    <h1>What We Offer</h1>
+                    <p class="fs-5 mb-4">
+                        Our licensed professionals provide a safe, non-judgmental space for healing and transformation through:
+                    </p>
+                    <div class="owl-carousel testimonial-carousel">
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Individual Therapy</h5>
+                            </div>
+                            <p class="fs-5">
+                                Personalized sessions to explore emotions, build coping skills and foster resilience.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Couples & Family Counseling</h5>
+                            </div>
+                            <p class="fs-5">
+                                Strengthening communication, resolving conflict and nurturing healthy relationships.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Teen & Youth Support</h5>
+                            </div>
+                            <p class="fs-5">
+                                Guidance through academic stress, identity development and emotional regulation.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Anxiety & Depression Treatment</h5>
+                            </div>
+                            <p class="fs-5">
+                                Evidence-based approaches to manage symptoms and restore balance.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Life Transitions & Adjustment Counseling</h5>
+                            </div>
+                            <p class="fs-5">
+                                Support during major changes such as relocation, loss or career shifts.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Our Approach</h1>
+                <p class="fs-5 mb-4">
+                    We honor the uniqueness of every person. Our clinicians use proven therapeutic methods - 
+                    including Cognitive Behavioral Therapy (CBT) and solution-focused techniques - to help 
+                    clients move forward with clarity and confidence
+                </p>
+                <h1>Why Choose Firm Foundation LLC?</h1>
+                <div class="text-start pb-5">
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Inclusive and affirming care for all backgrounds.</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Flexible scheduling, including evenings and weekends.</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Affordable options with insurance and payment plans.</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>A team committed to your growth, healing, and
+                            hope.</b></p>
+                </div>
+                <a class="btn btn-primary" href="#">Schedule Your First Session</a>
             </div>
         </div>
     </div>
-    <!-- Page Under Construction End -->
+    <!-- Main Service Tile End -->
 
 
      <!-- Footer Start -->
