--- a/services/minor-procedures.html
+++ b/services/minor-procedures.html
@@ -109,7 +109,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header pt-5 mb-6 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center pt-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -118,6 +118,7 @@
                         <nav aria-label="breadcrumb animated slideInDown">
                             <ol class="breadcrumb justify-content-center mb-0">
                                 <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../our-services.html">Services</a></li>
                                 <li class="breadcrumb-item" aria-current="page">Minor Procedure</li>
                             </ol>
                         </nav>
@@ -129,22 +130,102 @@
     <!-- Page Header End -->
 
 
-    <!-- Page Under Construction Start -->
-    <div class="container-fluid pt-6 pb-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1 text-uppercase">Page Under Construction</h1>
-                    <p class="mb-4">
-                        We're sorry, this page is under construction. Please check back later or contact us for more information.
-                    </p>
-                    <a class="btn btn-primary py-3 px-4" href="../our-services.html">Go Back To Services</a>
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-6 text-uppercase mb-5">Expert Care. Minimal Downtime. Maximum Comfort.</h1>
+                <p>
+                    At Firm Foundation LLC, we offer a range of in-office minor procedures performed by 
+                    skilled medical professionals in a safe, comfortable setting. Whether you're addressing 
+                    a skin concern, managing a chronic condition or seeking preventive care, our team is here 
+                    to provide efficient treatment with compassion and precision.
+                </p>
+            </div>
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                    <img class="img-fluid" src="../img/services/minor-procedure.jpg" alt="">
                 </div>
+                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
+                    <h1>Common Procedures We Perform</h1>
+                    <div class="owl-carousel testimonial-carousel">
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Wound Care & Suturing</h5>
+                            </div>
+                            <p class="fs-5">
+                                Treatment for minor cuts, abrasions, and lacerations - including cleaning, 
+                                stitching and follow-up care.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Skin Tag & Mole Removal</h5>
+                            </div>
+                            <p class="fs-5">
+                                Safe excision of benign skin growths for comfort or cosmetic reasons.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Abscess Drainage</h5>
+                            </div>
+                            <p class="fs-5">
+                                Prompt relief from painful skin infections through sterile drainage and aftercare.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Joint Injections</h5>
+                            </div>
+                            <p class="fs-5">
+                                Corticosteroid or other therapeutic injections to relieve pain and 
+                                inflammation in knees, shoulders and other joints.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Toenail Removal & Ingrown Nail Treatment</h5>
+                            </div>
+                            <p class="fs-5">
+                                Care for painful or infected nails with minimal discomfort and fast recovery.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Ear Lavage (Ear Wax Removal)</h5>
+                            </div>
+                            <p class="fs-5">
+                                Gentle cleaning to restore hearing and relieve discomfort caused by impacted wax.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Foreign Body Removal</h5>
+                            </div>
+                            <p class="fs-5">
+                                Safe extraction of splinters, glass, or other embedded materials from skin or soft tissue.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Why Choose Us</h1>
+                <div class="text-start pb-5">
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Clean, well-equipped treatment rooms.</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Experienced providers who prioritize comfort and safety.</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Clear instructions and follow-up support.</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Same-day or next-day appointments available.</b></p>
+                </div>
+                <a class="btn btn-primary" href="#">Book Now</a>
             </div>
         </div>
     </div>
-    <!-- Page Under Construction End -->
+    <!-- Main Service Tile End -->
 
 
      <!-- Footer Start -->
