--- a/services/obesity-management.html
+++ b/services/obesity-management.html
@@ -109,7 +109,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header pt-5 mb-6 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center pt-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -118,6 +118,7 @@
                         <nav aria-label="breadcrumb animated slideInDown">
                             <ol class="breadcrumb justify-content-center mb-0">
                                 <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../our-services.html">Services</a></li>
                                 <li class="breadcrumb-item" aria-current="page">Obesity Management</li>
                             </ol>
                         </nav>
@@ -129,22 +130,88 @@
     <!-- Page Header End -->
 
 
-    <!-- Page Under Construction Start -->
-    <div class="container-fluid pt-6 pb-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1 text-uppercase">Page Under Construction</h1>
-                    <p class="mb-4">
-                        We're sorry, this page is under construction. Please check back later or contact us for more information.
-                    </p>
-                    <a class="btn btn-primary py-3 px-4" href="../our-services.html">Go Back To Services</a>
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-6 text-uppercase mb-5">Compassionate Support. Personalized Plans. Sustainable Results.</h1>
+                <p>
+                    At Firm Foundation LLC, we understand that managing obesity is about more than just 
+                    weight - it's about reclaiming health, confidence and quality of life. Our approach 
+                    is rooted in respect, evidence-based care and a deep commitment to helping each client thrive.
+                </p>
+            </div>
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                    <img class="img-fluid" src="../img/services/obesity-management.jpg" alt="">
                 </div>
+                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
+                    <h1>What We Offer</h1>
+                    <div class="owl-carousel testimonial-carousel">
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Comprehensive Health Assessments</h5>
+                            </div>
+                            <p class="fs-5">
+                                We begin with a full evaluation of your physical health, lifestyle 
+                                and goals to tailor a plan that works for you.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Medical Interventions</h5>
+                            </div>
+                            <p class="fs-5">
+                                When appropriate, we offer FDA-approved medications and monitor progress 
+                                closely to ensure safety and effectiveness
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Behavioral & Emotional Support</h5>
+                            </div>
+                            <p class="fs-5">
+                                We recognize the emotional challenges that can accompany weight management 
+                                and offer compassionate support through counseling and referrals.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Nutrition & Lifestyle Counseling</h5>
+                            </div>
+                            <p class="fs-5">
+                                Our team provides practical, culturally sensitive guidance to support healthy 
+                                eating habits and sustainable behavior change.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Chronic Disease Prevention & Management</h5>
+                            </div>
+                            <p class="fs-5">
+                                Our program helps reduce the risk of diabetes, hypertension and other obesity-related 
+                                conditions through proactive care.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Why Choose Us</h1>
+                <div class="text-start pb-5">
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Non-judgmental, inclusive care.</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Personalized plans that fit your life.</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Ongoing support and follow-up.</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Focus on long-term wellness, not quick fixes.</b></p>
+                </div>
+                <a class="btn btn-primary" href="#">Schedule Your First Session</a>
             </div>
         </div>
     </div>
-    <!-- Page Under Construction End -->
+    <!-- Main Service Tile End -->
 
 
      <!-- Footer Start -->
