--- a/services/screening.html
+++ b/services/screening.html
@@ -109,7 +109,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header pt-5 mb-6 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center pt-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -118,6 +118,7 @@
                         <nav aria-label="breadcrumb animated slideInDown">
                             <ol class="breadcrumb justify-content-center mb-0">
                                 <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../our-services.html">Services</a></li>
                                 <li class="breadcrumb-item" aria-current="page">Physical And Health Screening</li>
                             </ol>
                         </nav>
@@ -129,22 +130,95 @@
     <!-- Page Header End -->
 
 
-    <!-- Page Under Construction Start -->
-    <div class="container-fluid pt-6 pb-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1 text-uppercase">Page Under Construction</h1>
-                    <p class="mb-4">
-                        We're sorry, this page is under construction. Please check back later or contact us for more information.
-                    </p>
-                    <a class="btn btn-primary py-3 px-4" href="../our-services.html">Go Back To Services</a>
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-6 text-uppercase mb-5">Know Your Numbers. Protect Your Future.</h1>
+                <p>
+                    At Firm Foundation LLC, we believe that early detection is the foundation of lifelong 
+                    wellness. Our comprehensive health screenings help clients understand their current 
+                    health status, identify potential risks and take informed steps toward better well-being.
+                </p>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5 row" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>What We Screen For</h1>
+                <div class="col-md-6">
+                    <div class="text-start pb-5">
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Blood Pressure & Heart Health.</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Diabetes & Blood Sugar Levels.</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Cholesterol & Lipid Profiles.</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Kidney & Liver Function.</b></p>
+                    </div>
                 </div>
+                <div class="col-md-6">
+                    <div class="text-start pb-5">
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Body Mass Index (BMI).</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Cancer Risk Assessments.</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Customized Screenings Based on Age, Gender & Family History.</b>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                    <img class="img-fluid" src="../img/services/screening.png" alt="">
+                </div>
+                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
+                    <h1>What to Expect?</h1>
+                    <div class="owl-carousel testimonial-carousel">
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Welcoming, Judgment-Free Environment</h5>
+                            </div>
+                            <p class="fs-5">
+                                We meet every client with respect, empathy, and discretion.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Quick & Confidential Testing</h5>
+                            </div>
+                            <p class="fs-5">
+                                Most screenings are completed in under an hour, with results shared promptly.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Personalized Guidance</h5>
+                            </div>
+                            <p class="fs-5">
+                                Our providers explain your results and offer next steps tailored to your needs.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Follow-Up & Referrals</h5>
+                            </div>
+                            <p class="fs-5">
+                                If further care is needed, we help connect you to trusted specialists.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Why It Matters</h1>
+                <p class="fs-5 mb-4">
+                    Health screenings empower you to catch issues early - often before symptoms appear. Whether 
+                    you're managing a chronic condition or simply staying proactive, regular checkups are a vital 
+                    part of your wellness journey.
+                </p>
+                <a class="btn btn-primary" href="#">Schedule Your First Session</a>
             </div>
         </div>
     </div>
-    <!-- Page Under Construction End -->
+    <!-- Main Service Tile End -->
 
 
      <!-- Footer Start -->
