--- a/services/telemedicine.html
+++ b/services/telemedicine.html
@@ -109,7 +109,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header pt-5 mb-6 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center pt-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -118,6 +118,7 @@
                         <nav aria-label="breadcrumb animated slideInDown">
                             <ol class="breadcrumb justify-content-center mb-0">
                                 <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../our-services.html">Services</a></li>
                                 <li class="breadcrumb-item" aria-current="page">Telemedicine</li>
                             </ol>
                         </nav>
@@ -129,22 +130,85 @@
     <!-- Page Header End -->
 
 
-    <!-- Page Under Construction Start -->
-    <div class="container-fluid pt-6 pb-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1 text-uppercase">Page Under Construction</h1>
-                    <p class="mb-4">
-                        We're sorry, this page is under construction. Please check back later or contact us for more information.
-                    </p>
-                    <a class="btn btn-primary py-3 px-4" href="../our-services.html">Go Back To Services</a>
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-6 text-uppercase mb-5">Care That Comes to You.</h1>
+                <p>
+                    At Firm Foundation LLC, we believe that quality healthcare should be convenient, secure 
+                    and accessible - wherever you are. Our telemedicine services connect you with trusted 
+                    providers through secure video visits, making it easier than ever to get the care you 
+                    need from the comfort of home.
+                </p>
+            </div>
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                    <img class="img-fluid" src="../img/services/telemedicine.jpg" alt="">
                 </div>
+                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
+                    <h1>What We Offer</h1>
+                    <div class="owl-carousel testimonial-carousel">
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Virtual Consultations</h5>
+                            </div>
+                            <p class="fs-5">
+                                For general health concerns, chronic condition management, medication refills and more.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Mental Health Support</h5>
+                            </div>
+                            <p class="fs-5">
+                                Confidential counseling and therapy sessions available via secure video.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Follow-Up Appointments</h5>
+                            </div>
+                            <p class="fs-5">
+                                Convenient check-ins after in-person visits to monitor progress and adjust care plans.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Health Screenings & Education</h5>
+                            </div>
+                            <p class="fs-5">
+                                Remote assessments and wellness guidance tailored to your needs.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5 row" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>What We Screen For</h1>
+                    <div class="text-start pb-5">
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Easy Scheduling.</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Secure & Private Platform.</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Compassionate Care.</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Flexible Access.</b>
+                        </p>
+                    </div>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Why It Matters</h1>
+                <p class="fs-5 mb-4">
+                    Telemedicine breaks down barriers to care - whether you're managing a chronic condition, 
+                    seeking mental health support or simply need quick medical advice. It's healthcare on your 
+                    terms, without compromising quality or connection.
+                </p>
+                <a class="btn btn-primary" href="#">Schedule Your First Session</a>
             </div>
         </div>
     </div>
-    <!-- Page Under Construction End -->
+    <!-- Main Service Tile End -->
 
 
      <!-- Footer Start -->
