--- a/services/travel-clinic.html
+++ b/services/travel-clinic.html
@@ -109,7 +109,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header pt-5 mb-6 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center pt-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -118,6 +118,7 @@
                         <nav aria-label="breadcrumb animated slideInDown">
                             <ol class="breadcrumb justify-content-center mb-0">
                                 <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../our-services.html">Services</a></li>
                                 <li class="breadcrumb-item" aria-current="page">Travel Clinic</li>
                             </ol>
                         </nav>
@@ -129,22 +130,98 @@
     <!-- Page Header End -->
 
 
-    <!-- Page Under Construction Start -->
-    <div class="container-fluid pt-6 pb-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1 text-uppercase">Page Under Construction</h1>
-                    <p class="mb-4">
-                        We're sorry, this page is under construction. Please check back later or contact us for more information.
-                    </p>
-                    <a class="btn btn-primary py-3 px-4" href="../our-services.html">Go Back To Services</a>
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-6 text-uppercase mb-5">Protect Your Health Before You Go - and After You Return</h1>
+                <p>
+                    Whether you're heading overseas for vacation, business, mission work or study abroad, 
+                    our Travel Clinic provides personalized care to help you travel safely and stay well. 
+                    We offer trusted guidance, vaccinations and medications tailored to your destination 
+                    and travel plans.
+                </p>
+            </div>
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                    <img class="img-fluid" src="../img/services/travel-clinic.jpg" alt="">
                 </div>
+                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
+                    <h1>What We Offer</h1>
+                    <div class="owl-carousel testimonial-carousel">
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Pre-Travel Consultations</h5>
+                            </div>
+                            <p class="fs-5">
+                                Personalized risk assessments and advice based on your itinerary, 
+                                health status and planned activities.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Vaccinations and Preventive Care</h5>
+                            </div>
+                            <p class="fs-5">
+                                Includes Yellow Fever, Typhoid, Hepatitis A & B, MMR and 
+                                other region-specific immunizations.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Travel Medications</h5>
+                            </div>
+                            <p class="fs-5">
+                                Prescriptions for malaria prevention, altitude sickness, motion sickness, 
+                                traveler's diarrhea and more.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Post-Travel Checkups</h5>
+                            </div>
+                            <p class="fs-5">
+                                If you return with health concerns - including fever, 
+                                gastrointestinal issues or fatigue - we're here to help.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5 row" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Who Should Visit Our Travel Clinic?</h1>
+                <div class="text-start pb-5">
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>
+                            International travelers visiting countries with different health risks.</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Students studying abroad.</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Missionary or volunteer travelers.</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Families planning multi-country vacations.</b></p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Business travelers needing fast, reliable care.</b>
+                    </p>
+                </div>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5 row" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>What Sets Us Apart:</h1>
+                <div class="text-start pb-5">
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>
+                            Fast Appointments and flexible scheduling.</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Expert Guidance from caring medical providers.</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Certified Yellow Fever Site (if applicable).</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>
+                        Comprehensive Service: travel, wellness and routine care — all in one place.
+                    </b></p>
+                </div>
+                <a class="btn btn-primary" href="#">Book Now</a>
             </div>
         </div>
     </div>
-    <!-- Page Under Construction End -->
+    <!-- Main Service Tile End -->
 
 
      <!-- Footer Start -->
