--- a/services/chronic-disease-management.html
+++ b/services/chronic-disease-management.html
@@ -109,7 +109,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header pt-5 mb-6 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center pt-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -118,6 +118,7 @@
                         <nav aria-label="breadcrumb animated slideInDown">
                             <ol class="breadcrumb justify-content-center mb-0">
                                 <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../our-services.html">Services</a></li>
                                 <li class="breadcrumb-item" aria-current="page">Chronic Disease Management</li>
                             </ol>
                         </nav>
@@ -128,23 +129,98 @@
     </div>
     <!-- Page Header End -->
 
-
-    <!-- Page Under Construction Start -->
-    <div class="container-fluid pt-6 pb-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1 text-uppercase">Page Under Construction</h1>
-                    <p class="mb-4">
-                        We're sorry, this page is under construction. Please check back later or contact us for more information.
-                    </p>
-                    <a class="btn btn-primary py-3 px-4" href="../our-services.html">Go Back To Services</a>
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-6 text-uppercase mb-5">Supporting Health. Sustaining Hope.</h1>
+                <p>
+                    Firm Foundation LLC, a provider of integrated medical and mental health services, offers chronic disease
+                    management
+                    as a key component of its care model. This service is designed to support individuals living with long-term
+                    health conditions such as diabetes, asthma, hypertension, and arthritis.
+                    The goal of chronic disease management at Firm Foundation LLC is to help clients effectively control
+                    their condition, reduce symptoms, prevent complications, and improve their overall quality of life. 
+                </p>
+                <p>
+                    <b>This is
+                    achieved through a personalized and holistic approach that includes:</b>
+                </p>
+            </div>
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                    <img class="img-fluid" src="../img/services/chronic-disease-management.jpg" alt="">
                 </div>
+                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="owl-carousel testimonial-carousel">
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Personalized Care Plans</h5>
+                            </div>
+                            <p class="fs-5">
+                                A detailed assessment of each client's health, lifestyle and unique 
+                                needs is conducted to create a comprehensive care plan.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Regular Monitoring and Follow-Up</h5>
+                            </div>
+                            <p class="fs-5">
+                                Ongoing check-ins and adjustments to care plans ensure that clients stay on track
+                                with their health goals and receive timely support.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Education and Empowerment</h5>
+                            </div>
+                            <p class="fs-5">
+                                Clients are provided with the knowledge and resources they need to understand their 
+                                condition, make informed health choices, and manage their health independently.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Lifestyle and Dietary Support</h5>
+                            </div>
+                            <p class="fs-5">
+                                The program includes practical advice and support for incorporating healthy lifestyle 
+                                changes, such as diet and exercise.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Medication Management</h5>
+                            </div>
+                            <p class="fs-5">
+                                The care team ensures clients are on the most effective medication regimen and provides 
+                                information about dosage, side effects, and potential interactions.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Care Coordination</h5>
+                            </div>
+                            <p class="fs-5">
+                                As part of its integrated model, Firm Foundation LLC coordinates care across different providers 
+                                and specialists to ensure seamless, continuous, and patient-centered support.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Why It Matters</h1>
+                <p class="fs-5 mb-4">
+                    Chronic conditions don't define you — they're just one part of your story. At Firm Foundation LLC, 
+                    we're here to walk alongside you, offering tools and encouragement to help you live fully and thrive.
+                </p>
+                <a class="btn btn-primary" href="#">Schedule Your First Session</a>
             </div>
         </div>
     </div>
-    <!-- Page Under Construction End -->
+    <!-- Main Service Tile End -->
 
 
      <!-- Footer Start -->
