--- a/services/erectile-dysfunction-management.html
+++ b/services/erectile-dysfunction-management.html
@@ -109,7 +109,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header pt-5 mb-6 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center pt-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -118,6 +118,7 @@
                         <nav aria-label="breadcrumb animated slideInDown">
                             <ol class="breadcrumb justify-content-center mb-0">
                                 <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../our-services.html">Services</a></li>
                                 <li class="breadcrumb-item" aria-current="page">Erectile Dysfunction Management</li>
                             </ol>
                         </nav>
@@ -128,23 +129,84 @@
     </div>
     <!-- Page Header End -->
 
-
-    <!-- Page Under Construction Start -->
-    <div class="container-fluid pt-6 pb-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1 text-uppercase">Page Under Construction</h1>
-                    <p class="mb-4">
-                        We're sorry, this page is under construction. Please check back later or contact us for more information.
-                    </p>
-                    <a class="btn btn-primary py-3 px-4" href="../our-services.html">Go Back To Services</a>
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-6 text-uppercase mb-5">Restoring Confidence. Reclaiming Intimacy.</h1>
+                <p>
+                    At Firm Foundation LLC, we understand that erectile dysfunction (ED) can affect more 
+                    than just physical health—it can impact relationships, self-esteem, and overall quality 
+                    of life. That's why we offer compassionate, confidential care tailored to each individual's needs.
+                </p>
+            </div>
+            <div class="text-center mx-auto py-5 wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>What Is Erectile Dysfunction?</h1>
+                <p class="fs-5 mb-4">
+                    Erectile Dysfunction(ED) is the consistent inability to achieve or maintain an erection firm 
+                    enough for sexual activity. It's more common than many realize and can result from a 
+                    variety of factors, including:
+                </p>
+                <p><i class="fa fa-check-square text-primary me-3"></i><b>Chronic conditions like diabetes, hypertension or heart disease.</b></p>
+                <p><i class="fa fa-check-square text-primary me-3"></i><b>Hormonal imbalances or low testosterone.</b></p>
+                <p><i class="fa fa-check-square text-primary me-3"></i><b>Psychological stress, anxiety or depression.</b></p>
+                <p><i class="fa fa-check-square text-primary me-3"></i><b>Lifestyle factors such as smoking, alcohol use, or poor sleep.</b></p>
+            </div>
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                    <img class="img-fluid" src="../img/services/erectile-dysfunction.jpg" alt="">
                 </div>
+                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
+                    <h1>Our Approach</h1>
+                    <p>We provide a safe, judgment-free space where clients can explore effective solutions:</p>
+                    <div class="owl-carousel testimonial-carousel">
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Comprehensive Evaluation</h5>
+                            </div>
+                            <p class="fs-5">
+                                Medical history, physical exam, and lab testing to identify root causes.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Personalized Treatment Plans</h5>
+                            </div>
+                            <p class="fs-5">
+                                Options may include medication, lifestyle changes, hormone therapy, or referrals for advanced care.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Counseling & Support</h5>
+                            </div>
+                            <p class="fs-5">
+                                Addressing emotional and relational aspects of ED through individual or couples therapy.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Education & Prevention</h5>
+                            </div>
+                            <p class="fs-5">
+                                Guidance on maintaining sexual health and preventing future complications.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Why It Matters</h1>
+                <p class="fs-5 mb-4">
+                    We believe that sexual health is an essential part of overall wellness. Our team is committed 
+                    to helping you restore confidence, improve intimacy, and live a fuller life—with discretion, 
+                    dignity and respect.
+                </p>
+                <a class="btn btn-primary" href="#">Schedule Your First Session</a>
             </div>
         </div>
     </div>
-    <!-- Page Under Construction End -->
+    <!-- Main Service Tile End -->
 
 
      <!-- Footer Start -->
