--- a/services/pap-smear.html
+++ b/services/pap-smear.html
@@ -109,7 +109,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header pt-5 mb-6 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center pt-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -118,6 +118,7 @@
                         <nav aria-label="breadcrumb animated slideInDown">
                             <ol class="breadcrumb justify-content-center mb-0">
                                 <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../our-services.html">Services</a></li>
                                 <li class="breadcrumb-item" aria-current="page">Pap Smear</li>
                             </ol>
                         </nav>
@@ -129,22 +130,79 @@
     <!-- Page Header End -->
 
 
-    <!-- Page Under Construction Start -->
-    <div class="container-fluid pt-6 pb-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1 text-uppercase">Page Under Construction</h1>
-                    <p class="mb-4">
-                        We're sorry, this page is under construction. Please check back later or contact us for more information.
-                    </p>
-                    <a class="btn btn-primary py-3 px-4" href="../our-services.html">Go Back To Services</a>
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-6 text-uppercase mb-5">Early Detection. Lifelong Protection.</h1>
+                <p class="fs-5 mb-4">
+                    At Firm Foundation LLC, we believe that preventive care is a powerful tool for 
+                    lifelong wellness. Our Pap smear screenings are designed to detect early signs of 
+                    cervical cancer and other abnormalities - giving clients the knowledge and support 
+                    they need to stay healthy and informed.
+                </p>
+                <h1>What Is a Pap Smear?</h1>
+                <p class="fs-5 mb-4">
+                    A Pap smear is a preventive screening test that involves collecting cells from the cervix to 
+                    check for abnormalities that may indicate cervical cancer or other health issues. This simple 
+                    procedure is an essential part of routine gynecological care and can help detect potential 
+                    problems early, when they are most treatable.
+                </p>
+            </div>
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                    <img class="img-fluid" src="../img/services/pap-smear.png" alt="">
                 </div>
+                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
+                    <h1>What to Expect</h1>
+                    <div class="owl-carousel testimonial-carousel">
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Private, Comfortable Environment</h5>
+                            </div>
+                            <p class="fs-5">
+                                Our team prioritizes dignity and discretion during every exam.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Gentle, Professional Care</h5>
+                            </div>
+                            <p class="fs-5">
+                                Performed by experienced providers who explain each step and answer questions.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Results & Follow-Up</h5>
+                            </div>
+                            <p class="fs-5">
+                                Timely communication of results and guidance on next steps if needed.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Vaccination & Wellness Support</h5>
+                            </div>
+                            <p class="fs-5">
+                                We also offer HPV vaccination and education on cervical health.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Why It Matters</h1>
+                <p class="fs-5 mb-4">
+                    Cervical cancer is highly treatable when caught early. Regular Pap smears can detect changes 
+                    before symptoms appear - making early intervention possible and empowering clients 
+                    to take charge of their health.
+                </p>
+                <a class="btn btn-primary" href="#">Schedule A Session</a>
             </div>
         </div>
     </div>
-    <!-- Page Under Construction End -->
+    <!-- Main Service Tile End -->
 
 
      <!-- Footer Start -->
