--- a/services/smoking-cessation-management.html
+++ b/services/smoking-cessation-management.html
@@ -109,7 +109,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header pt-5 mb-6 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center pt-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -118,6 +118,7 @@
                         <nav aria-label="breadcrumb animated slideInDown">
                             <ol class="breadcrumb justify-content-center mb-0">
                                 <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../our-services.html">Services</a></li>
                                 <li class="breadcrumb-item" aria-current="page">Smoking Cessation Management</li>
                             </ol>
                         </nav>
@@ -129,22 +130,90 @@
     <!-- Page Header End -->
 
 
-    <!-- Page Under Construction Start -->
-    <div class="container-fluid pt-6 pb-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1 text-uppercase">Page Under Construction</h1>
-                    <p class="mb-4">
-                        We're sorry, this page is under construction. Please check back later or contact us for more information.
-                    </p>
-                    <a class="btn btn-primary py-3 px-4" href="../our-services.html">Go Back To Services</a>
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-6 text-uppercase mb-5">Quit with Confidence. Breathe with Freedom.</h1>
+                <p>
+                    At Firm Foundation LLC, we understand that quitting smoking is a personal journey - 
+                    and we're here to walk it with you. Our smoking cessation management program offers 
+                    compassionate, evidence-based support to help you break free from tobacco and reclaim your health.
+                </p>
+            </div>
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                    <img class="img-fluid" src="../img/services/smoking-cessation.jpg" alt="">
                 </div>
+                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
+                    <h1>What We Offer</h1>
+                    <div class="owl-carousel testimonial-carousel">
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Personalized Quit Plans</h5>
+                            </div>
+                            <p class="fs-5">
+                                Tailored strategies based on your lifestyle, goals and health history.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Behavioral Counseling</h5>
+                            </div>
+                            <p class="fs-5">
+                                One-on-one or group sessions to build coping skills and motivation.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Medication Support</h5>
+                            </div>
+                            <p class="fs-5">
+                                Access to nicotine replacement therapy (NRT) and prescription options when appropriate.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Progress Tracking & Encouragement</h5>
+                            </div>
+                            <p class="fs-5">
+                                Regular check-ins to celebrate milestones and adjust your plan as needed.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Whole-Person Wellness</h5>
+                            </div>
+                            <p class="fs-5">
+                                Guidance on stress management, nutrition, and physical activity to support your journey.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5 row" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>What We Screen For</h1>
+                    <div class="text-start pb-5">
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Judgment-Free Zone.</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Experienced Providers.</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Flexible Scheduling.</b>
+                        </p>
+                    </div>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Why It Matters</h1>
+                <p class="fs-5 mb-4">
+                    Quitting smoking reduces your risk of heart disease, cancer, stroke and respiratory illness. 
+                    But more than that - it gives you back control, energy, and peace of mind. You don't have 
+                    to do it alone.
+                </p>
+                <a class="btn btn-primary" href="#">Schedule A Session</a>
             </div>
         </div>
     </div>
-    <!-- Page Under Construction End -->
+    <!-- Main Service Tile End -->
 
 
      <!-- Footer Start -->
