--- a/services/womens-and-mens-health.html
+++ b/services/womens-and-mens-health.html
@@ -109,7 +109,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header pt-5 mb-6 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center pt-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -118,6 +118,7 @@
                         <nav aria-label="breadcrumb animated slideInDown">
                             <ol class="breadcrumb justify-content-center mb-0">
                                 <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../our-services.html">Services</a></li>
                                 <li class="breadcrumb-item" aria-current="page">Women's & Men's Health</li>
                             </ol>
                         </nav>
@@ -129,22 +130,72 @@
     <!-- Page Header End -->
 
 
-    <!-- Page Under Construction Start -->
-    <div class="container-fluid pt-6 pb-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1 text-uppercase">Page Under Construction</h1>
-                    <p class="mb-4">
-                        We're sorry, this page is under construction. Please check back later or contact us for more information.
-                    </p>
-                    <a class="btn btn-primary py-3 px-4" href="../our-services.html">Go Back To Services</a>
+    <!-- Main Service Tile Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-6 text-uppercase mb-5">Whole-Person Care, Designed for Your Journey.</h1>
+                <p>
+                    At Firm Foundation LLC, we believe that everyone deserves respectful, personalized 
+                    healthcare - no matter where they are in life. Our Women's and Men's Health services 
+                    are built around prevention, early detection and wellness, with care that's tailored 
+                    to your individual needs and goals.
+                </p>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5 row" data-wow-delay="0.5s" style="max-width: 600px;">
+                <div class="col-md-6">
+                    <h1 class="text-center">Women's Health Services</h1>
+                    <div class="text-start pb-5">
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Annual Well-Woman Exams.</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Birth Control Counseling & Prescriptions.</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>STI Testing & Treatment.</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Pap Smears & Cervical Cancer Screenings.</b></p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Menstrual & Hormonal Support.</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Breast Health Assessments.</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Pregnancy Testing & Prenatal Referrals.</b></p>
+                    </div>
                 </div>
+                <div class="col-md-6">
+                    <h1 class="text-center">Men's Health Services</h1>
+                    <div class="text-start pb-5">
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Routine Physicals.</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Prostate & Testicular Screenings.</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Blood Pressure & Cholesterol Checks.</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>STI Testing & Treatment.</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Erectile Function & Hormonal Support.</b>
+                        </p>
+                        <p><i class="fa fa-check-square text-primary me-3"></i><b>Lifestyle Counseling (nutrition, sleep, mental health).</b>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mx-auto wow fadeInUp pt-5 row" data-wow-delay="0.5s" style="max-width: 600px;">
+                <h1>Why Choose Firm Foundation LLC?</h1>
+                <div class="text-start pb-5">
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>
+                            Respectful & Judgment-Free Care.</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Private & Comfortable Environment.</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Inclusive Services for Every Identity.</b>
+                    </p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Quick Appointments & Transparent Pricing.</b></p>
+                    <p><i class="fa fa-check-square text-primary me-3"></i><b>Focus on Prevention & Education.</b></p>
+                </div>
+                <a class="btn btn-primary" href="#">Book Now</a>
             </div>
         </div>
     </div>
-    <!-- Page Under Construction End -->
+    <!-- Main Service Tile End -->
 
 
      <!-- Footer Start -->
